# nlp-fastapi

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: main.py  model_manager.py  pipeline.py
app/api/: search.py
deploy/: deploy.sh  generate-env.sh  nginx.conf
